--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Non local models
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Wer are a collobaration of researchers developing a simulation code for non local models accelerated by the C++
+  standard library for parallism and concurrency (HPX).
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
