--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Non local models
-email: nlm-fellows@stellar-group.org
+title: Non local models software toolkit
+email: nlm-fellows@cct.lsu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Wer are a collobaration of researchers developing a simulation code for non local models accelerated by the C++
   standard library for parallism and concurrency (HPX).
