--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Add folder for exmaples
+collections:
+  examples:
+    output: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
