--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Non local models software toolkit
 email: nlm-fellows@cct.lsu.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Wer are a collobaration of researchers developing a simulation code for non local models accelerated by the C++
+  We are a collobaration of researchers developing a simulation code for non local models accelerated by the C++
   standard library for parallism and concurrency (HPX).
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
